bk_ida/gccida/g3/reg_bitfield_target_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_bitfield_target_p/src/combine.c:12589:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v27 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v26) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_bitfield_target_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_bitfield_target_p/src/combine.c:12608:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v31 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v30) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_bitfield_target_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_bitfield_target_p/src/combine.c:12667:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v41 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v40) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_bitfield_target_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_bitfield_target_p/src/combine.c:12686:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v45 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v44) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_bitfield_target_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_bitfield_target_p/src/combine.c:12728:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v8.rtwint = ( __int64)body->fld[0]; 
                      ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_bitfield_target_p/src/combine.c:12758:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v15 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v14) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_bitfield_target_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_bitfield_target_p/src/combine.c:12782:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v19 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v18) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_bitfield_target_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_bitfield_target_p/src/obj/combine.o] Error 1
